[package]
name = "day19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
nom = "7.1.1"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
petgraph = "0.6.2"
rayon = "1.6.1"
strum = "0.24.1"
strum_macros = "0.24.3"
util = { path = "../util" }
